--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-native-safe-area-context": "^4.7.1",
     "react-native-svg": "^13.10.0",
     "react-native-svg-transformer": "^1.0.0",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-vector-icons": "^10.0.0",
+    "react-native-video": "^6.0.0-alpha.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
