--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "link": "^1.5.1",
     "react": "18.2.0",
     "react-native": "^0.72.3",
+    "react-native-image-picker": "^5.6.0",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-svg": "^13.10.0",
     "react-native-svg-transformer": "^1.0.0",
