--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "link": "^1.5.1",
     "react": "18.2.0",
+    "react-hook-form": "^7.45.2",
     "react-native": "^0.72.3",
     "react-native-image-picker": "^5.6.0",
     "react-native-safe-area-context": "^4.7.1",
