--- a/ios/InstaClonApp/Info.plist
+++ b/ios/InstaClonApp/Info.plist
@@ -35,6 +35,11 @@
 			</dict>
 		</dict>
 	</dict>
+
+		<key>NSPhotoLibraryUsageDescription</key>
+		<string>Give the photo library permission to change your avatar</string>
+
+
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
 	<key>UILaunchStoryboardName</key>
