--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-svg": "^13.10.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^10.0.0",
-    "react-native-video": "^6.0.0-alpha.6"
+    "react-native-video": "^6.0.0-alpha.6",
+    "expo": "^48.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
