--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "expo": "^48.0.0",
+    "expo-camera": "~13.2.1",
     "link": "^1.5.1",
     "react": "18.2.0",
     "react-hook-form": "^7.45.2",
@@ -17,10 +19,9 @@
     "react-native-image-picker": "^5.6.0",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-svg": "^13.10.0",
-    "react-native-svg-transformer": "^1.0.0",
+    "react-native-svg-transformer": "^1.1.0",
     "react-native-vector-icons": "^10.0.0",
-    "react-native-video": "^6.0.0-alpha.6",
-    "expo": "^48.0.0"
+    "react-native-video": "^6.0.0-alpha.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
