--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.7",
     "expo": "^48.0.0",
     "expo-camera": "~13.2.1",
     "link": "^1.5.1",
@@ -18,6 +19,7 @@
     "react-native": "^0.72.3",
     "react-native-image-picker": "^5.6.0",
     "react-native-safe-area-context": "^4.7.1",
+    "react-native-screens": "^3.22.1",
     "react-native-svg": "^13.10.0",
     "react-native-svg-transformer": "^1.1.0",
     "react-native-vector-icons": "^10.0.0",
